<?xml version="1.0"?>
<package format="2">
  <name>ros_control_boilerplate</name>
  <version>0.4.1</version>
  <description>Simple simulation interface and template for setting up a hardware interface for ros_control</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>roscpp</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib</depend>
  <depend>urdf</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>
  <depend>control_toolbox</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>libgflags-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>talon_interface</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
