<package format="2">
  <name>talon_controllers</name>
  <version>0.1.0</version>
  <description>talon_controllers</description>

  <maintainer email="programmers@team900.org">FRC900 Programmers</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/FRC900</url>

  <author>Team900 Programmers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>talon_interface</depend>
  <depend>urdf</depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>driver_base</depend>

  <export>
    <controller_interface plugin="${prefix}/talon_controllers_plugins.xml"/>
  </export>
</package>

