<package format="2">
  <name>talon_swerve_drive_controller</name>
  <version>0.13.1</version>
  <description>Controller for a swerve drive mobile base.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>

  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>talon_controllers</depend>
  <depend>controller_interface</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>std_srvs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/talon_swerve_drive_controller_plugins.xml"/>
  </export>
</package>
