<?xml version="1.0"?>
<package format="2">
  <name>teleop_joystick_control</name>
  <version>0.0.1</version>
  <description>Simple subscriber and publisher for interpreting joystick data into commands for the robot</description>

  <maintainer email="programmers@team900.org">FRC Team 900 Programmers</maintainer>
  <author email="programmers@team900.org">FRC Team 900 Programmers</author>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>cmake_modules</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>behaviors</depend>
  <depend>elevator_controller</depend>

  <export>
  </export>
</package>
